# lilac

./: Cargo.toml  features.txt  non-local.txt  ref.txt
examples/: go.rs
src/: arr.rs  ast.rs  buf.rs  compile.rs  compile1.rs  compile_pass1.rs  compile_pass2.rs  hir.rs  infer.rs  ir0.rs  ir1.rs  ir2.rs  irp.rs  iru.rs  iter.rs  lex.rs  lexer.rs  lib.rs  make_ast.rs  make_hir.rs  make_iru.rs  make_uir.rs  mir.rs  neon.rs  op1.rs  op2.rs  operator.rs  parse.rs  parse_ast.rs  parse_sexp.rs  pass1.rs  pass_ast_to_hir.rs  pass_src_to_ast.rs  pir.rs  prelude.rs  prim.rs  primop2.rs  sexp.rs  ssa.rs  symbol.rs  (+10 more)
tests/unified/: main.rs  test_array.rs  test_combinator.rs  test_fib.rs  test_incdec.rs  test_loop.rs  test_parse.rs  test_tak.rs  test_union_find.rs  util.rs
