[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2024"
license = "Artistic-2.0"
name = "lilac"
version = "0.1.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "allow"
private_bounds = "allow"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[features]

[dependencies]

[dev-dependencies]

[profile.release]

[profile.dev]
