[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2024"
license = "Artistic-2.0"
name = "lilac"
version = "0.1.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
private_bounds = "allow"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[features]

[dependencies]
oxcart = { git = "https://github.com/apribadi/oxcart.git" }
tangerine = { git = "https://github.com/apribadi/tangerine.git" }
plain-old-pointer = { git = "https://github.com/apribadi/pop.git" }
foldhash = { version = "0.2.0" }

[dev-dependencies]
expect-test = "1.5.1"

[profile.release]

[profile.dev]
